# nop-test

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.toml  settings.py
src/: cli.py  runner.py
src/browser/: context.py
src/cache/: manager.py
src/checkers/: base.py  content.py  forms.py  links.py  llm_review.py  navigation.py  performance.py  responsive.py  seo.py  visual.py
src/llm/: client.py  prompts.py  synthesizer.py
src/models/: findings.py  report.py
